--- a/.github/workflows/ansible-play.yml
+++ b/.github/workflows/ansible-play.yml
@@ -9,7 +9,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    continue-on-error: true
+    continue-on-error: false
     strategy:
       fail-fast: false
       max-parallel: 4
